# flutter_wasm_demo

./: README.md  pubspec.yaml
docs/: wasm环境配置.md  x02_flutter添加wasm.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/web/wasm/: cmake-emscripten-explore.js  cmake-emscripten-explore.wasm
lib/: f_wasm.dart  f_wasm_web.dart
lib/web/: contract.dart  m.dart
test/: f_wasm_test.dart
wasm/: CMakeLists.txt
wasm/src/: export.cpp
wasm/web/: cmake-emscripten-explore.html
